--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckMenuItem?>
@@ -20,19 +21,19 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.TextFlow?>
 
-<BorderPane prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.Controllers.MainWindowController">
+<BorderPane prefHeight="800.0" prefWidth="1280.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RunwayRedeclarationTool.Controllers.MainWindowController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <Menu text="File">
                 <MenuItem onAction="#handleNewAirport" text="New airport..." />
                 <MenuItem fx:id="new_runway_button" onAction="#handleNewRunway" text="New runway..." />
                 <MenuItem onAction="#handleNewObstacle" text="New obstacle..." />
-            <Menu mnemonicParsing="false" text="Import">
-              <items>
-                  <MenuItem mnemonicParsing="false" onAction="#handleImportFile" text="File" />
-                  <MenuItem mnemonicParsing="false" onAction="#handleImportFolder" text="Folder" />
-              </items>
-            </Menu>
+                <Menu mnemonicParsing="false" text="Import">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#handleImportFile" text="File" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleImportFolder" text="Folder" />
+                    </items>
+                </Menu>
             </Menu>
             <Menu text="View">
                 <CheckMenuItem text="Clearway" />
@@ -49,22 +50,41 @@
     </top>
     <center>
         <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
-            <Tab text="Top-down view">
-                <TabPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ffffff;" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
-                    <Tab fx:id="leftRunwayTab" text="Runway 1">
-                        <FlowPane fx:id="leftTopDownViewContainer" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0" style="-fx-background-color: #ffffff;" />
+            <!--<Tab text="Top-down view">-->
+            <!--<TabPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ffffff;"-->
+            <!--tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">-->
+            <!--<Tab fx:id="leftRunwayTab" text="Runway 1">-->
+            <!--<FlowPane fx:id="leftTopDownViewContainer" minHeight="0.0" minWidth="0.0" prefHeight="0.0"-->
+            <!--prefWidth="0.0" style="-fx-background-color: #ffffff;"/>-->
+            <!--</Tab>-->
+            <!--<Tab fx:id="rightRunwayTab" text="Runway 2">-->
+            <!--<FlowPane fx:id="rightTopDownViewContainer" minHeight="0.0" minWidth="0.0" prefHeight="0.0"-->
+            <!--prefWidth="0.0"/>-->
+            <!--</Tab>-->
+            <!--</TabPane>-->
+            <!--</Tab>-->
+            <!--<Tab text="Side view"/>-->
+            <Tab fx:id="leftRunwayTab" text="Virtual runway 1">
+                <TabPane tabClosingPolicy="UNAVAILABLE">
+                    <Tab text="Top-down view">
+                        <FlowPane fx:id="leftTopDownViewContainer" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0" />
                     </Tab>
-                    <Tab fx:id="rightRunwayTab" text="Runway 2">
-                        <FlowPane fx:id="rightTopDownViewContainer" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0" />
-                    </Tab>
+                    <Tab text="Side-on view" />
                 </TabPane>
             </Tab>
-            <Tab text="Side view" />
+            <Tab fx:id="rightRunwayTab" text="Virtual runway 2 ">
+                <TabPane tabClosingPolicy="UNAVAILABLE">
+                    <Tab style="-fx-tab-header-background: transparent;" text="Top-down view">
+                        <FlowPane fx:id="rightTopDownViewContainer" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0" />
+                    </Tab>
+                    <Tab text="Side-on view" />
+                </TabPane>
+            </Tab>
         </TabPane>
     </center>
     <right>
-        <VBox prefHeight="768.0" prefWidth="375.0" BorderPane.alignment="CENTER">
-            <GridPane hgap="5.0">
+        <VBox fx:id="controls" prefHeight="768.0" prefWidth="375.0" BorderPane.alignment="CENTER">
+            <GridPane hgap="5.0" vgap="5.0">
                 <columnConstraints>
                     <ColumnConstraints halignment="RIGHT" prefWidth="100.0" />
                     <ColumnConstraints prefWidth="250.0" />
@@ -72,27 +92,34 @@
                 <rowConstraints>
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <RowConstraints />
                 </rowConstraints>
                 <Label text="Airport:" />
                 <Label text="Runway:" GridPane.rowIndex="1" />
+                <Label text="Obstacle:" GridPane.rowIndex="2" />
                 <ComboBox fx:id="airportComboBox" onAction="#updateRunways" prefWidth="325.0" promptText="Select an airport..." GridPane.columnIndex="1" />
                 <ComboBox fx:id="runwayComboBox" onAction="#drawRunway" prefWidth="325.0" promptText="Select a runway..." GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <ComboBox fx:id="obstructionComboBox" prefWidth="325.0" promptText="Add an obstacle..." GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <padding>
+               <Insets top="10.0" />
+            </padding>
             </GridPane>
-            <GridPane hgap="5.0">
-                <columnConstraints>
-                    <ColumnConstraints halignment="RIGHT" prefWidth="100.0" />
-                    <ColumnConstraints prefWidth="250.0" />
-                </columnConstraints>
-                <rowConstraints>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                </rowConstraints>
-                <Label text="Obstacle:" />
-                <ComboBox fx:id="obstructionComboBox" prefWidth="325.0" promptText="Add an obstacle..." GridPane.columnIndex="1" />
-                <padding>
-                    <Insets bottom="10.0" top="10.0" />
-                </padding>
-            </GridPane>
-            <GridPane hgap="5.0">
+            <!--<GridPane hgap="5.0">-->
+                <!--<columnConstraints>-->
+                    <!--<ColumnConstraints halignment="RIGHT" prefWidth="100.0" />-->
+                    <!--<ColumnConstraints prefWidth="250.0" />-->
+                <!--</columnConstraints>-->
+                <!--<rowConstraints>-->
+                    <!--<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
+                <!--</rowConstraints>-->
+                <!--<Label text="Obstacle:" />-->
+                <!--<ComboBox fx:id="obstructionComboBox" prefWidth="325.0" promptText="Add an obstacle..." GridPane.columnIndex="1" />-->
+                <!--<padding>-->
+                    <!--<Insets bottom="10.0" top="20.0" />-->
+                <!--</padding>-->
+            <!--</GridPane>-->
+            <GridPane hgap="5.0" vgap="5.0">
                 <columnConstraints>
                     <ColumnConstraints halignment="RIGHT" maxWidth="237.0" minWidth="225.0" prefWidth="233.0" />
                     <ColumnConstraints maxWidth="104.0" minWidth="86.0" prefWidth="98.0" />
@@ -116,18 +143,18 @@
                 <Label text="Obstacle side of C/L:" GridPane.rowIndex="2" />
                 <ComboBox fx:id="runwaySideComboBox" prefHeight="31.0" prefWidth="101.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                 <padding>
-                    <Insets bottom="10.0" />
+                    <Insets bottom="10.0" top="10.0" />
                 </padding>
             </GridPane>
-            <Button fx:id="calculateButton" onAction="#recalculateDistances" prefWidth="143.0" text="Calculate">
-                <VBox.margin>
-                    <Insets bottom="10.0" left="116.0" right="10.0" />
-                </VBox.margin>
+            <Button fx:id="calculateButton" alignment="CENTER" onAction="#recalculateDistances" prefHeight="25.0" prefWidth="150.0" text="Calculate">
+            <VBox.margin>
+               <Insets bottom="10.0" left="204.0" right="10.0" />
+            </VBox.margin>
             </Button>
             <TabPane prefHeight="500.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
                 <Tab text="Declared distances">
                     <ScrollPane>
-                        <TextFlow fx:id="declaredDistances" style="-fx-font-family:'Consolas'">
+                        <TextFlow fx:id="declaredDistances" prefHeight="465.0" prefWidth="380.0" style="-fx-font-family:'Consolas'">
                             <padding>
                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                             </padding>
@@ -142,9 +169,10 @@
                     </TextFlow>
                 </Tab>
             </TabPane>
-            <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-            </padding>
         </VBox>
     </right>
+
+    <stylesheets>
+        <URL value="@style.css" />
+    </stylesheets>
 </BorderPane>
