--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.TextFlow?>
 <?import java.net.URL?>
-<BorderPane prefHeight="800.0" prefWidth="1280.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.121"
-            xmlns:fx="http://javafx.com/fxml/1"
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="800.0" prefWidth="1280.0" stylesheets="@style.css"
+            xmlns="http://javafx.com/javafx/8.0.121"
             fx:controller="RunwayRedeclarationTool.Controllers.MainWindowController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
@@ -98,18 +98,30 @@
                 <Label text="m" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
                 <Label text="m" GridPane.columnIndex="2"/>
                 <Label text="Obstacle side of C/L:" GridPane.rowIndex="2"/>
-                <ComboBox fx:id="runwaySideComboBox" prefHeight="31.0" prefWidth="101.0" GridPane.columnIndex="1"
-                          GridPane.rowIndex="2"/>
+                <ComboBox fx:id="runwaySideComboBox" prefHeight="31.0" prefWidth="101.0" promptText="Select..."
+                          GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                 <padding>
                     <Insets bottom="10.0" top="10.0"/>
                 </padding>
             </GridPane>
-            <Button fx:id="calculateButton" alignment="CENTER" onAction="#recalculateDistances" prefHeight="25.0"
-                    prefWidth="150.0" text="Calculate">
+            <GridPane minHeight="30.0">
+                <columnConstraints>
+                    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                </rowConstraints>
+                <children>
+                    <Button fx:id="calculateButton" alignment="CENTER" onAction="#recalculateDistances"
+                            prefHeight="25.0" prefWidth="150.0" text="Calculate" GridPane.columnIndex="1"/>
+                    <Button fx:id="clearAllButton" onAction="#clearFields" mnemonicParsing="false" prefHeight="25.0"
+                            prefWidth="150.0" style="-fx-background-color: #777;" text="Clear"/>
+                </children>
                 <VBox.margin>
-                    <Insets bottom="10.0" left="204.0" right="10.0"/>
+                    <Insets bottom="10.0" left="10.0" right="10.0"/>
                 </VBox.margin>
-            </Button>
+            </GridPane>
             <TabPane prefHeight="500.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
                 <Tab text="Declared distances">
                     <TextFlow fx:id="declaredDistances" prefHeight="465.0" prefWidth="380.0"
